--- a/css+div/dummy-youtube/css/menu.css
+++ b/css+div/dummy-youtube/css/menu.css
@@ -5,8 +5,8 @@
     background: #f3f2f2;
     top: 0;
     box-sizing:border-box;
-    -webkit-transition: left ease-in 0.3s;
-    transition: left ease-in 0.3s;
+    -webkit-transition: left linear 0.2s;
+    transition: left linear 0.2s;
     left: 10;
     padding-top: 10px;
     z-index: 2;
