--- a/css+div/dummy-youtube/css/details.css
+++ b/css+div/dummy-youtube/css/details.css
@@ -8,10 +8,7 @@
 }
 
 #menu.show {
-    left: 10;
-}
-body {
-    margin:0
+    left: 0;
 }
 
 #content {
@@ -28,10 +25,10 @@ body {
 #mask {
     position: fixed;
     background:rgba(74, 74, 74, 0.5);
-    width: calc(100% - 10px);
+    width: 100%;
     height: 100%;
     top: 0;
-    left: 10px;
+    left: 0px;
     z-index: 1;
     display: none;
 }
