--- a/css+div/dummy-youtube/css/menu.css
+++ b/css+div/dummy-youtube/css/menu.css
@@ -7,7 +7,8 @@
     box-sizing:border-box;
     -webkit-transition: left linear 0.2s;
     transition: left linear 0.2s;
-    left: 10;
+    left: 0;
+    padding-left: 10px;
     padding-top: 10px;
     z-index: 2;
     display: none;
