--- a/css+div/dummy-youtube/css/details.css
+++ b/css+div/dummy-youtube/css/details.css
@@ -1,6 +1,7 @@
 @import url("./common.css");
 @import url("./header.css");
 @import url("./menu.css");
+@import url("./popup.css");
 
 #menu {
     background-color: #fff;
@@ -186,40 +187,6 @@
 #intro #actions #subme #subed > img:nth-of-type(2) {
     top: 8;
     right: 13;
-}
-#intro #actions #subme #subed > div {
-    position: absolute;
-    top: 50px;
-    left: 0;
-    background-color: #fff;
-    width: 250px;
-    border-radius: 10px;
-    box-shadow: 5px 7px 8px #5f5f5f;
-    display: none;
-}
-#intro #actions #subme #subed > div.open {
-    display:block;
-}
-
-#intro #actions #subme #subed > div ul {
-    padding: 0;
-}
-#intro #actions #subme #subed > div ul li {
-    text-align:left;
-    font-weight:normal;
-    line-height: 40px;
-    padding-left: 65px;
-    cursor: pointer;
-    position: relative;
-}
-#intro #actions #subme #subed > div ul li:hover {
-    background-color: #c8c8c8;
-}
-#intro #actions #subme #subed > div ul li img {
-    position: absolute;
-    width: 25px;
-    top: 7px;
-    left: 15px;
 }
 
 /* styles for #others*/
@@ -411,7 +378,7 @@
 /* styles for mask*/
 #mask {
     position: fixed;
-    background:rgba(74, 74, 74, 0.5);
+    background:rgba(74, 74, 74, 0.7);
     width: 100%;
     height: 100%;
     top: 0;
@@ -425,6 +392,7 @@
 /* styles for popups*/
 #sharePopup {
     width: 500px;
+    padding: 20px 30px;
     height: 300px;
     background-color: #fff;
     position: fixed;
@@ -433,9 +401,60 @@
     border-radius: 10px;
     box-shadow: 5px 7px 8px #5f5f5f;
     display: none;
-    cursor: pointer;
 }
 #sharePopup.show {
     display: block;
     z-index: 1;
 }
+#sharePopup #title {
+    height: 40px;
+    line-height: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+#sharePopup #title div:nth-of-type(1) {
+    width: fit-content;
+}
+
+#sharePopup #close {
+    height: 100%;
+    width: 40px;
+    background-color: #dfdede;
+    border-radius: 20px;
+    cursor: pointer;
+    position: relative;
+}
+#sharePopup #close:hover{
+    background-color: #c8c8c8;
+}
+#sharePopup #close span {
+    position:absolute;
+    display: inline-block;
+    padding: 1px 0;
+    width:36px;
+    top:19px;
+    left: 2px;
+    background-color:#5f5f5f
+}
+#sharePopup #close span:nth-child(1) {
+    transform: rotate(45deg)
+}
+#sharePopup #close span:nth-child(2) {
+    transform: rotate(-45deg)
+}
+#sharePopup #shares {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#sharePopup #shares img {
+    width: 150px;
+    height: 150px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+
+
