--- a/css+div/dummy-youtube/css/comment/comment_content.css
+++ b/css+div/dummy-youtube/css/comment/comment_content.css
@@ -80,6 +80,28 @@
 .comments .comment_content > div:nth-of-type(3) > div:nth-of-type(3):hover {
     background-color: #c8c8c8;
 }
+.comments .comment_content > div:nth-of-type(4) {
+    height: 40px;
+    padding-left: 50px;
+    padding-right: 10px;
+    line-height: 40px;
+    text-align: center;
+    color: #1296db;
+    width:fit-content;
+    border-radius: 20px;
+    box-sizing: border-box;
+    position: relative;
+    cursor: pointer;
+}
+.comments .comment_content > div:nth-of-type(4):hover {
+    background-color:#b6e2fa;
+}
+.comments .comment_content > div:nth-of-type(4) img {
+    position: absolute;
+    width: 20px;
+    top: 10px;
+    left: 16px;
+}
 
 
 
