--- a/css+div/dummy-youtube/css/comment/oneComment.css
+++ b/css+div/dummy-youtube/css/comment/oneComment.css
@@ -4,7 +4,6 @@
     padding-left: 70px;
     margin-bottom: 30px;
     box-sizing: border-box;
-    background-color: darkkhaki;
     position: relative;
 }
 
@@ -17,6 +16,16 @@
     position: absolute;
     width: 50px;
     border-radius: 25px;
+    top: 0;
+    left: 0;
+}
+.comments .oneComment.replymode {
+    padding-left: 50px;
+}
+.comments .replymode img {
+    position: absolute;
+    width: 30px;
+    border-radius: 15px;
     top: 0;
     left: 0;
 }
