--- a/css+div/dummy-youtube/css/index.css
+++ b/css+div/dummy-youtube/css/index.css
@@ -2,41 +2,12 @@
 @import url("./header.css");
 @import url("./menu.css");
 @import url("./popup.css");
+@import url("./video/tabs.css");
+@import url("./video/primary.css");
+@import url("./video/short.css");
 
 
-/* style for tabs */
-#tabs {
-    height: 80px;
-    width: 100%;
-    left: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-}
-#tabs span {
-    display:inline-block;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    background-color: #dfdede;
-    padding: 2px 15px;
-    margin-right: 15px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-#tabs span.cur {
-    background-color: #5f5f5f;
-    color: #f2f2f2;
-}
-#tabs span:hover {
-    background-color: #c8c8c8;
-}
-#tabs span.cur:hover{
-    background-color: #5f5f5f;
-    color: #f2f2f2;
-}
-
-/* styles for main .primary */
+/* styles for main container */
 main {
     margin-top: 80px;
     margin-left: var(--sideSize);;
@@ -45,242 +16,6 @@ main {
     padding-right: 30px;
     box-sizing: border-box;
     position: relative;
-}
-
-.primary {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-/* styles for video*/
-.primary .video {
-    width: 450px;
-    min-width:450px; 
-    height: 400px;
-    min-height: 400px;
-    box-sizing: border-box;
-    margin-right: 30px;
-    margin-bottom: 10px;
-}
-
-.primary .video .overview {
-    width: 100%;
-    height: calc(100% - 120px);
-    box-sizing: border-box;
-    cursor: pointer;
-}
-.primary .video .overview a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-.primary .video .overview a video {
-    width: 100%;
-    height: 100% + 10px;
-    border-radius: 15px;
-    box-sizing: border-box;
-}
-
-.primary .video .intro {
-    padding: 0px 65px;
-    width: 100%;
-    height: 120px;
-    vertical-align: middle;
-    position: relative;
-    box-sizing: border-box;
-    cursor: pointer;
-}
-.primary .video .intro span {
-    display: block;
-}
-.primary .video .intro span:nth-of-type(1) {
-    font-size: large;
-    color: #000;
-    padding-bottom: 10px;
-
-}
-.primary .video .intro span:nth-of-type(2) {
-    padding-bottom: 3px;
-}
-.primary .video .intro span:nth-of-type(2):hover > span {
-    display: inline-block;
-}
-.primary .video .intro span:nth-of-type(2) > span {
-    background:rgba(74, 74, 74, 1);
-    padding: 8px;
-    border-radius: 3px;
-    color: #fff;
-    position:absolute;
-    top: 15px;
-    left: 150px;
-    display: none;
-}
-.primary .video .intro img {
-    position:absolute;
-    width: 40px;
-    top: 0;
-    left: 5;
-    border-radius: 20px;
-}
-.primary .video .intro .actions {
-    position:absolute;
-    width: 40px;
-    height: 40px;
-    top: 0;
-    right: 5;
-    border-radius: 20px;
-    cursor: pointer;
-}
-.primary .video .intro .actions:hover {
-    background-color:#c8c8c8;
-}
-.primary .video .intro .actions img {
-    position: absolute;
-    width: 25px;
-    top: 8;
-    left: 7;
-    display: none;
-}
-.primary .video .intro:hover .actions img {
-    display:block;
-}
-
-
-
-/* styles for shorts */
-#s_title{
-    height: 50px;
-    width: 100%;
-    line-height: 50px;
-    font-size:x-large;
-    font-weight:normal;
-    color: #2b2b2b;
-    display: flex;
-    justify-content: space-between;
-    
-}
-#s_title_name {
-    position: relative;
-    padding-left: 40px;
-}
-#s_title_name img {
-    position: absolute;
-    top:10px;
-    left:0;
-}
-#hint_and_close div {
-    display: inline-block;
-    vertical-align: top;
-}
-div.hint{
-    height: 40px;
-    margin: 5px 20px;
-    padding: 0 10px;
-    font-size: medium;
-    font-weight: normal;
-    line-height: 40px;;
-    text-align: center;
-    color: #fff;
-    background:rgba(74, 74, 74, 0.7);
-    border-radius: 10px;
-    visibility: hidden;
-}
-div.hint.active {
-    visibility: visible;
-}
-div.close {
-    width: 50px;
-    height: 50px; 
-    border-radius: 25px;
-    align-items: center;
-    position: relative;
-    cursor: pointer;
-}
-div.close.active {
-    background-color: #c8c8c8;
-}
-.close span {
-    display: block;
-    padding: 1px 0;
-    width: 36px;
-    position:absolute;
-    top: 24px;
-    left:6px;
-    background-color: #747474;
-}
-.close span:nth-child(1) {
-    transform: rotate(45deg);
-}
-.close span:nth-child(2) {
-    transform: rotate(-45deg);
-}
-
-.short {
-    display: flex;
-    flex-wrap: wrap;
-}
-.short .video {
-    width: 300px;
-    min-width:300px; 
-    height: 450px;
-    min-height:450px;
-    
-    box-sizing: border-box;
-    margin-right: 30px;
-    margin-bottom: 50px;
-}
-.short .video .overview {
-    width: 100%;
-    height: calc(100% - 60px);
-    background-color: #000;
-    border-radius: 20px;
-    margin-bottom:  20px;
-}
-.short .video .intro {
-    height: 60px;
-    width: 100%;
-    padding: 10px 20px;
-    box-sizing: border-box;
-    position: relative;
-    cursor: pointer;
-}
-.short .video .intro span {
-    display: block;
-}
-.short .video .intro span:nth-child(1) {
-    color: #000;
-    font-size: larger;
-}
-.short .video .intro span:nth-child(3) {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    border-radius: 10px;
-}
-.short .video .intro span:nth-child(3):hover {
-    background-color: #c8c8c8;
-}
-.short .video .intro span:nth-child(3) img {
-    position: absolute;
-    width: 16px;
-    top: 2px;
-    left: 2px;
-    display: none;
-}
-.short .video .overview a {
-    display: block;
-}
-.short .video .overview a video {
-    width: 300px;
-    height: 400px;
-    border-radius: 20px;
-    box-sizing: border-box;
-}
-.short .video .intro:hover .short_actions img {
-    display:block;
 }
 
 main .line {
