--- a/css+div/dummy-youtube/css/details.css
+++ b/css+div/dummy-youtube/css/details.css
@@ -3,6 +3,11 @@
 @import url("./menu.css");
 @import url("./popup.css");
 @import url("./comment/main.css");
+@import url("./details/major.css");
+@import url("./video/tabs.css");
+@import url("./video/primary.css");
+@import url("./details/sharePopup.css");
+
 body {
     color: #000;
 }
@@ -33,360 +38,12 @@ body {
     flex-wrap: wrap;
     justify-content: center;
 }
-/* styles for #videos #major*/
-#videos #major {
-    flex: 1 1 600px;
-    min-width: 400px;
-    max-width: 1024px;
-    margin: 0 20px;
-}
-/* styles for video */
-#videos #major #video {
-    width: 100%;
-}
-#videos #major #video video {
-    object-fit: cover;
-    width: 100%;
-}
-/* styles for #intro */
-#videos #major #video #intro {
-    margin: 20px 0;
-    width: 100%;
-    height:fit-content;
-}
-#intro > span {
-    color: #000;
-    font-size:x-large;
-}
-/* styles for #actions */
-#intro #actions {
-    margin: 15px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-#intro #actions > span {
-    width: 300px;
-    height:50px;
-    text-align: center;
-    line-height: 50px;
-    font-weight: bold;
-    color: #fff;
-    white-space: nowrap;
-    display: block;
-    background-color: #151515;
-    border-radius: 10px;
-    position: fixed;
-    left: 20px;
-    bottom: -50px;
-    z-index: 1;
-}
 
-#intro #actions #subme #sub.open {
-    display:block;
-}
-#intro #actions #subaddedMesg.open {
-    animation: subadded_show 0.3s 0.5s ease-in both,subadded_disappear 0.3s 6s ease-out forwards;
-}
-
-@keyframes subadded_show {
-    from {bottom: -50px;}
-    to {bottom: 20px;}
-}
-@keyframes subadded_disappear {
-    from {bottom: 20px;}
-    to {bottom: -50px;}
-}
-
-#intro #actions #subme {
-    height:50px;
-    margin-bottom: 10px;
-    flex: 0 1 400px;
-    min-width: 150px;
-    line-height: 50px;
-    display: flex;
-    justify-content: space-between;
-}
-#intro #actions #subme #who {
-    padding-left: 50px;
-    height: 100%;
-    flex: 0 1 150px;
-    min-width: 100px;
-    position: relative;
-}
-#intro #actions #subme #who span {
-    display:block;
-    height: 25px;
-    white-space: nowrap;
-    padding: 0 15px;
-    line-height: 25px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-#intro #actions #subme #who span:first-of-type {
-    font-size: larger;
-}
-#intro #actions #subme #who span:last-of-type {
-    font-size:small;
-    color: #4b4b4b;
-}
-#intro #actions #subme #who a {
-    position:absolute;
-    width: 50px;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: block;
-}
-#intro #actions #subme #who img {
-    width:100%;
-    height:100%;  
-    border-radius: 25px;
-}
-#intro #actions #subme #sub {
-    height: 100%;
-    flex: 0 0 80px;
-    padding: 0 25px;
-    color: #fff;
-    text-align: center;
-    font-weight: bold;
-    border-radius: 25px;
-    background-color: #000;
-    display: none;
-    cursor: pointer;
-}
-#intro #actions #subme #sub:hover {
-    background-color: #323232;
-}
-
-
-#intro #actions #subme #subed {
-    height: 100%;
-    flex: 0 0 100px;
-    padding: 0 50px;
-    text-align: center;
-    border-radius: 25px;
-    background: #dfdede;
-    cursor: pointer;
-    position: relative;
-    display: none;
-}
-#intro #actions #subme #subed.open {
-    display: block;
-}
-#intro #actions #subme #subed:hover {
-    background-color: #c8c8c8;
-}
-#intro #actions #subme #subed img {
-    width: 30px;
-    position: absolute;
-}
-#intro #actions #subme #subed > img:nth-of-type(1) {
-    top: 10;
-    left: 13;
-}
-#intro #actions #subme #subed > img:nth-of-type(2) {
-    top: 8;
-    right: 13;
-}
-
-/* styles for #others*/
-#intro #actions #others {
-    height:50px;
-    line-height: 50px;
-    margin-bottom: 10px;
-    flex: 0 0 420px;
-    display: flex;
-    justify-content:space-between;
-}
-#intro #actions #others div {
-    display: inline-block;
-    vertical-align: top;
-}
-#intro #actions #others .text {
-    display: inline-block;
-    height: 100%;
-    padding-right: 20px;
-}
-#intro #actions #others span {
-    position: absolute;
-    padding: 5px 20px;
-    color: #fff;
-    background:rgba(74, 74, 74, 0.7);
-    white-space: nowrap;
-    height: 30px;
-    line-height: 30px;
-    border-radius: 10px;
-    top: 55px;
-    left: 0;
-    display: none;
-    z-index: 1;
-}
-#intro #actions #others img {
-    position: absolute;
-    width: 25px;
-    top: 13px;
-    left: 13px;
-}
-
-/* styles for #like*/
-#intro #actions #others #like {
-    height: 100%;
-    padding-left: 50px;
-    background-color: #dfdede;
-    width:fit-content;
-    border-radius: 25px 0  0 25px;
-    border-right:1px solid #c3c3c3;
-    position: relative;
-    cursor: pointer;
-}
-#intro #actions #others #like:hover {
-    background-color: #c8c8c8;
-}
-#intro #actions #others #like:hover span {
-    display: inline-block;
-}
-#intro #actions #others #like > div {
-    display: inline-block;
-    height: 100%;
-    padding-right: 10px;
-}
-
-/* styles for #dislike*/
-#intro #actions #others #dislike {
-    height: 100%;
-    padding-right: 50px;
-    background-color: #dfdede;
-    width:fit-content;
-    border-radius: 0 25px 25px 0;
-    border-left:1px solid #c3c3c3;
-    box-sizing: border-box;
-    margin-left: -0.5em;
-    position: relative;
-    cursor: pointer;
-}
-#intro #actions #others #dislike:hover {
-    background-color: #c8c8c8;
-}
-#intro #actions #others #dislike:hover span {
-    display: inline-block;
-}
-#intro #actions #others #dislike img {
-    top: 15px;
-    right: 15px;
-}
-
-/* styles for #share*/
-#intro #actions #others #share {
-    height: 100%;
-    padding-left: 50px;
-    background-color: #dfdede;
-    width:fit-content;
-    border-radius: 25px;
-    position: relative;
-    cursor: pointer;
-}
-#intro #actions #others #share:hover {
-    background-color: #c8c8c8;
-}
-#intro #actions #others #share:hover span {
-    display: inline-block;
-}
-#intro #actions #others #share img {
-    position: absolute;
-    width: 25px;
-    top: 12px;
-    left: 13px;
-}
-
-/* styles for #save*/
-#intro #actions #others #save {
-    height: 100%;
-    padding-left: 50px;
-    background-color: #dfdede;
-    width:fit-content;
-    border-radius: 25px;
-    position: relative;
-    cursor: pointer;
-}
-#intro #actions #others #save:hover {
-    background-color: #c8c8c8;
-}
-#intro #actions #others #save:hover span {
-    display: inline-block;
-}
-#intro #actions #others #save img {
-    position: absolute;
-    width: 25px;
-    top: 12px;
-    left: 13px;
-}
-#intro #actions #others #more {
-    height: 100%;
-    width: 50px;
-    background-color: #dfdede;
-    border-radius: 25px;
-    position: relative;
-    cursor: pointer;
-}
-#intro #actions #others #more:hover {
-    background-color: #c8c8c8;
-}
-#intro #actions #others #more:hover span {
-    display: inline-block;
-}
-#intro #actions #others #more img {
-    position: absolute;
-    width: 25px;
-    top: 12px;
-    left: 13px;
-}
-
-/* styles for #summary*/
-#intro #summary {
-    position: relative;
-}
-#intro #summary span {
-    display:inline-block;
-    width: 100%;
-    overflow: hidden;
-    padding: 10px;
-    padding-bottom: 30px;
-    background-color: #dfdede;
-    height:200px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    cursor:pointer;
-}
-#intro #summary > div {
-    position: absolute;
-    bottom: 0;
-    cursor: pointer;
-    color:blue;
-    background-color: #dfdede;
-    padding: 5px 10px;
-    border-radius: 10px;
-}
-#intro #summary #showMore {
-    right: 0px;
-}
-#intro #summary #showLess {
-    left: 0px;
-    display: none;
-}
-#intro #summary #showMore:hover {
-    background-color: #c8c8c8;
-}
-#intro #summary #showLess:hover {
-    background-color: #c8c8c8;
-}
-
-/* styles for reds  container*/
+/* styles for reds container*/
 #videos #reds {
     flex: 1 0 400px;
     max-width: 500px;
-    height: 1000px;
-    background-color:brown;
+    height: fit-content;
 }
 /* styles for comments container*/
 .comments {
@@ -426,73 +83,5 @@ body {
 #mask.show {
     display: block;
 }
-
-/* styles for #sharePopup*/
-#sharePopup {
-    width: 500px;
-    padding: 20px 30px;
-    height: 300px;
-    background-color: #fff;
-    position: fixed;
-    top: 30%;
-    left: 30%;
-    border-radius: 10px;
-    box-shadow: 5px 7px 8px #5f5f5f;
-    display: none;
-}
-#sharePopup.show {
-    display: block;
-    z-index: 1;
-}
-#sharePopup #title {
-    height: 40px;
-    line-height: 40px;
-    display: flex;
-    justify-content: space-between;
-}
-#sharePopup #title div:nth-of-type(1) {
-    width: fit-content;
-}
-
-#sharePopup #close {
-    height: 100%;
-    width: 40px;
-    background-color: #dfdede;
-    border-radius: 20px;
-    cursor: pointer;
-    position: relative;
-}
-#sharePopup #close:hover{
-    background-color: #c8c8c8;
-}
-#sharePopup #close span {
-    position:absolute;
-    display: inline-block;
-    padding: 1px 0;
-    width:36px;
-    top:19px;
-    left: 2px;
-    background-color:#5f5f5f
-}
-#sharePopup #close span:nth-child(1) {
-    transform: rotate(45deg)
-}
-#sharePopup #close span:nth-child(2) {
-    transform: rotate(-45deg)
-}
-#sharePopup #shares {
-    width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#sharePopup #shares img {
-    width: 150px;
-    height: 150px;
-    margin-right: 20px;
-    cursor: pointer;
-}
-
 
 
