--- a/css+div/dummy-youtube/css/comment/comment_header.css
+++ b/css+div/dummy-youtube/css/comment/comment_header.css
@@ -19,6 +19,7 @@
     height: 30px;
     line-height: 30px;
     padding: 10px 20px;
+    color: #fff;
     background-color: rgba(74, 74, 74, 1);
     border-radius: 10px;
     display: none;
