--- a/css+div/dummy-youtube/css/video/primary.css
+++ b/css+div/dummy-youtube/css/video/primary.css
@@ -5,10 +5,10 @@
 
 /* styles for video*/
 .primary .video {
-    width: 450px;
-    min-width:450px; 
-    height: 400px;
-    min-height: 400px;
+    flex: 1 1 400px;
+    min-width:300px; 
+    max-width: 500px;
+    height: fit-content;
     box-sizing: border-box;
     margin-right: 30px;
     margin-bottom: 10px;
@@ -28,15 +28,14 @@
 }
 .primary .video .overview a video {
     width: 100%;
-    height: 100% + 10px;
     border-radius: 15px;
     box-sizing: border-box;
 }
 
 .primary .video .intro {
-    padding: 0px 65px;
+    padding: 10px 65px;
     width: 100%;
-    height: 120px;
+    height: fit-content;
     vertical-align: middle;
     position: relative;
     box-sizing: border-box;
@@ -70,7 +69,7 @@
 .primary .video .intro img {
     position:absolute;
     width: 40px;
-    top: 0;
+    top: 10px;
     left: 5;
     border-radius: 20px;
 }
@@ -78,7 +77,7 @@
     position:absolute;
     width: 40px;
     height: 40px;
-    top: 0;
+    top: 10px;
     right: 5;
     border-radius: 20px;
     cursor: pointer;
