--- a/css+div/tailwind-challenge1/src/app/globals.css
+++ b/css+div/tailwind-challenge1/src/app/globals.css
@@ -70,6 +70,6 @@
 
 @layer utilities {
   .card {
-    @apply bg-white shadow-md rounded-lg overflow-hidden cursor-pointer hover:shadow-xl
+    @apply bg-white rounded-lg overflow-hidden cursor-pointer shadow-md hover:shadow-xl relative
   }
 }
