--- a/css+div/tailwind-redo/my-app/src/app/globals.css
+++ b/css+div/tailwind-redo/my-app/src/app/globals.css
@@ -79,6 +79,6 @@
 
 @layer components {
   .card {
-    @apply rounded-xl overflow-hidden shadow-md bg-white hover:shadow-xl cursor-pointer relative
+    @apply rounded-xl bg-white overflow-hidden shadow-md hover:shadow-xl relative cursor-pointer;
   }
 }
